target/generated-sources/antlr4/edu/ucsd/cse232b/project/XQueryParser.java
// Generated from XQuery.g4 by ANTLR 4.4
package edu.ucsd.cse232b.project;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XQueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__36=1, T__35=2, T__34=3, T__33=4, T__32=5, T__31=6, T__30=7, T__29=8, 
		T__28=9, T__27=10, T__26=11, T__25=12, T__24=13, T__23=14, T__22=15, T__21=16, 
		T__20=17, T__19=18, T__18=19, T__17=20, T__16=21, T__15=22, T__14=23, 
		T__13=24, T__12=25, T__11=26, T__10=27, T__9=28, T__8=29, T__7=30, T__6=31, 
		T__5=32, T__4=33, T__3=34, T__2=35, T__1=36, T__0=37, NAME=38, Var=39, 
		StringConstant=40, WS=41;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'some'", "'text()'", "'return'", "'(\"'", "'{'", 
		"'..'", "'}'", "'='", "'for'", "':='", "'\")'", "'satisfies'", "'eq'", 
		"'('", "'is'", "'*'", "','", "'.'", "'join'", "'</'", "'['", "'=='", "'<'", 
		"'//'", "']'", "'>'", "'@'", "'or'", "'let'", "'where'", "'in'", "')'", 
		"'and'", "'doc'", "'not'", "'empty'", "NAME", "Var", "StringConstant", 
		"WS"
	};
	public static final int
		RULE_query = 0, RULE_optXq = 1, RULE_optCond = 2, RULE_path = 3, RULE_optVarIn = 4, 
		RULE_optReturn = 5, RULE_xq = 6, RULE_varList = 7, RULE_forClause = 8, 
		RULE_varIn = 9, RULE_letClause = 10, RULE_varEq = 11, RULE_whereClause = 12, 
		RULE_returnClause = 13, RULE_cond = 14, RULE_ap = 15, RULE_rp = 16, RULE_f = 17, 
		RULE_doc = 18;
	public static final String[] ruleNames = {
		"query", "optXq", "optCond", "path", "optVarIn", "optReturn", "xq", "varList", 
		"forClause", "varIn", "letClause", "varEq", "whereClause", "returnClause", 
		"cond", "ap", "rp", "f", "doc"
	};

	@Override
	public String getGrammarFileName() { return "XQuery.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XQueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public XqContext xq() {
			return getRuleContext(XqContext.class,0);
		}
		public OptXqContext optXq() {
			return getRuleContext(OptXqContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(38); optXq();
				}
				break;
			case 2:
				{
				setState(39); xq(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptXqContext extends ParserRuleContext {
		public OptReturnContext optReturn() {
			return getRuleContext(OptReturnContext.class,0);
		}
		public OptCondContext optCond() {
			return getRuleContext(OptCondContext.class,0);
		}
		public OptVarInContext optVarIn() {
			return getRuleContext(OptVarInContext.class,0);
		}
		public OptXqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optXq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterOptXq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitOptXq(this);
		}
	}

	public final OptXqContext optXq() throws RecognitionException {
		OptXqContext _localctx = new OptXqContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_optXq);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); match(T__27);
			setState(43); optVarIn();
			setState(47);
			switch (_input.LA(1)) {
			case T__6:
				{
				setState(44); match(T__6);
				setState(45); optCond(0);
				}
				break;
			case T__33:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(49); match(T__33);
			setState(50); optReturn(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptCondContext extends ParserRuleContext {
		public OptCondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optCond; }
	 
		public OptCondContext() { }
		public void copyFrom(OptCondContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OptVarsEqContext extends OptCondContext {
		public TerminalNode Var(int i) {
			return getToken(XQueryParser.Var, i);
		}
		public List<TerminalNode> Var() { return getTokens(XQueryParser.Var); }
		public OptVarsEqContext(OptCondContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterOptVarsEq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitOptVarsEq(this);
		}
	}
	public static class OptVarStrEqContext extends OptCondContext {
		public TerminalNode StringConstant() { return getToken(XQueryParser.StringConstant, 0); }
		public TerminalNode Var() { return getToken(XQueryParser.Var, 0); }
		public OptVarStrEqContext(OptCondContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterOptVarStrEq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitOptVarStrEq(this);
		}
	}
	public static class OptCondAndContext extends OptCondContext {
		public OptCondContext optCond(int i) {
			return getRuleContext(OptCondContext.class,i);
		}
		public List<OptCondContext> optCond() {
			return getRuleContexts(OptCondContext.class);
		}
		public OptCondAndContext(OptCondContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterOptCondAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitOptCondAnd(this);
		}
	}
	public static class OptStrsEqContext extends OptCondContext {
		public List<TerminalNode> StringConstant() { return getTokens(XQueryParser.StringConstant); }
		public TerminalNode StringConstant(int i) {
			return getToken(XQueryParser.StringConstant, i);
		}
		public OptStrsEqContext(OptCondContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterOptStrsEq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitOptStrsEq(this);
		}
	}

	public final OptCondContext optCond() throws RecognitionException {
		return optCond(0);
	}

	private OptCondContext optCond(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		OptCondContext _localctx = new OptCondContext(_ctx, _parentState);
		OptCondContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_optCond, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				_localctx = new OptVarsEqContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(53); match(Var);
				setState(54);
				_la = _input.LA(1);
				if ( !(_la==T__28 || _la==T__23) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(55); match(Var);
				}
				break;
			case 2:
				{
				_localctx = new OptStrsEqContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(56); match(StringConstant);
				setState(57);
				_la = _input.LA(1);
				if ( !(_la==T__28 || _la==T__23) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(58); match(StringConstant);
				}
				break;
			case 3:
				{
				_localctx = new OptVarStrEqContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(59); match(Var);
				setState(60);
				_la = _input.LA(1);
				if ( !(_la==T__28 || _la==T__23) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(61); match(StringConstant);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(69);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new OptCondAndContext(new OptCondContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_optCond);
					setState(64);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(65); match(T__3);
					setState(66); optCond(2);
					}
					} 
				}
				setState(71);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class PathContext extends ParserRuleContext {
		public PathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_path; }
	 
		public PathContext() { }
		public void copyFrom(PathContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OptVarPathContext extends PathContext {
		public TerminalNode NAME(int i) {
			return getToken(XQueryParser.NAME, i);
		}
		public List<TerminalNode> NAME() { return getTokens(XQueryParser.NAME); }
		public TerminalNode Var() { return getToken(XQueryParser.Var, 0); }
		public OptVarPathContext(PathContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterOptVarPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitOptVarPath(this);
		}
	}
	public static class OptApathContext extends PathContext {
		public TerminalNode NAME(int i) {
			return getToken(XQueryParser.NAME, i);
		}
		public List<TerminalNode> NAME() { return getTokens(XQueryParser.NAME); }
		public DocContext doc() {
			return getRuleContext(DocContext.class,0);
		}
		public OptApathContext(PathContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterOptApath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitOptApath(this);
		}
	}

	public final PathContext path() throws RecognitionException {
		PathContext _localctx = new PathContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_path);
		int _la;
		try {
			int _alt;
			setState(96);
			switch (_input.LA(1)) {
			case T__2:
				_localctx = new OptApathContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(72); doc();
				setState(77);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(73);
						_la = _input.LA(1);
						if ( !(_la==T__36 || _la==T__12) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						setState(74); match(NAME);
						}
						} 
					}
					setState(79);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				setState(82);
				_la = _input.LA(1);
				if (_la==T__36 || _la==T__12) {
					{
					setState(80);
					_la = _input.LA(1);
					if ( !(_la==T__36 || _la==T__12) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					setState(81); match(T__34);
					}
				}

				}
				break;
			case Var:
				_localctx = new OptVarPathContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(84); match(Var);
				setState(89);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(85);
						_la = _input.LA(1);
						if ( !(_la==T__36 || _la==T__12) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						setState(86); match(NAME);
						}
						} 
					}
					setState(91);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				setState(94);
				_la = _input.LA(1);
				if (_la==T__36 || _la==T__12) {
					{
					setState(92);
					_la = _input.LA(1);
					if ( !(_la==T__36 || _la==T__12) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					setState(93); match(T__34);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptVarInContext extends ParserRuleContext {
		public PathContext path(int i) {
			return getRuleContext(PathContext.class,i);
		}
		public TerminalNode Var(int i) {
			return getToken(XQueryParser.Var, i);
		}
		public List<TerminalNode> Var() { return getTokens(XQueryParser.Var); }
		public List<PathContext> path() {
			return getRuleContexts(PathContext.class);
		}
		public OptVarInContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optVarIn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterOptVarIn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitOptVarIn(this);
		}
	}

	public final OptVarInContext optVarIn() throws RecognitionException {
		OptVarInContext _localctx = new OptVarInContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_optVarIn);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); match(Var);
			setState(99); match(T__5);
			setState(100); path();
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__19) {
				{
				{
				setState(101); match(T__19);
				setState(102); match(Var);
				setState(103); match(T__5);
				setState(104); path();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptReturnContext extends ParserRuleContext {
		public TerminalNode NAME(int i) {
			return getToken(XQueryParser.NAME, i);
		}
		public OptReturnContext optReturn(int i) {
			return getRuleContext(OptReturnContext.class,i);
		}
		public List<TerminalNode> NAME() { return getTokens(XQueryParser.NAME); }
		public List<OptReturnContext> optReturn() {
			return getRuleContexts(OptReturnContext.class);
		}
		public XqContext xq() {
			return getRuleContext(XqContext.class,0);
		}
		public TerminalNode Var() { return getToken(XQueryParser.Var, 0); }
		public OptReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optReturn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterOptReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitOptReturn(this);
		}
	}

	public final OptReturnContext optReturn() throws RecognitionException {
		return optReturn(0);
	}

	private OptReturnContext optReturn(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		OptReturnContext _localctx = new OptReturnContext(_ctx, _parentState);
		OptReturnContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_optReturn, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(111); match(Var);
				}
				break;
			case 2:
				{
				setState(112); match(T__13);
				setState(113); match(NAME);
				setState(114); match(T__10);
				setState(115); match(T__31);
				setState(116); optReturn(0);
				setState(117); match(T__29);
				setState(118); match(T__16);
				setState(119); match(NAME);
				setState(120); match(T__10);
				}
				break;
			case 3:
				{
				setState(122); xq(0);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(130);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new OptReturnContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_optReturn);
					setState(125);
					if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
					setState(126); match(T__19);
					setState(127); optReturn(4);
					}
					} 
				}
				setState(132);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class XqContext extends ParserRuleContext {
		public XqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xq; }
	 
		public XqContext() { }
		public void copyFrom(XqContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class XqueryTagContext extends XqContext {
		public TerminalNode NAME(int i) {
			return getToken(XQueryParser.NAME, i);
		}
		public List<TerminalNode> NAME() { return getTokens(XQueryParser.NAME); }
		public XqContext xq() {
			return getRuleContext(XqContext.class,0);
		}
		public XqueryTagContext(XqContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterXqueryTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitXqueryTag(this);
		}
	}
	public static class XqueryConcatContext extends XqContext {
		public XqContext xq(int i) {
			return getRuleContext(XqContext.class,i);
		}
		public List<XqContext> xq() {
			return getRuleContexts(XqContext.class);
		}
		public XqueryConcatContext(XqContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterXqueryConcat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitXqueryConcat(this);
		}
	}
	public static class StrConstContext extends XqContext {
		public TerminalNode StringConstant() { return getToken(XQueryParser.StringConstant, 0); }
		public StrConstContext(XqContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterStrConst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitStrConst(this);
		}
	}
	public static class XqueryDescendentContext extends XqContext {
		public RpContext rp() {
			return getRuleContext(RpContext.class,0);
		}
		public XqContext xq() {
			return getRuleContext(XqContext.class,0);
		}
		public XqueryDescendentContext(XqContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterXqueryDescendent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitXqueryDescendent(this);
		}
	}
	public static class XqueryParenContext extends XqContext {
		public XqContext xq() {
			return getRuleContext(XqContext.class,0);
		}
		public XqueryParenContext(XqContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterXqueryParen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitXqueryParen(this);
		}
	}
	public static class AbsolutePathContext extends XqContext {
		public ApContext ap() {
			return getRuleContext(ApContext.class,0);
		}
		public AbsolutePathContext(XqContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterAbsolutePath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitAbsolutePath(this);
		}
	}
	public static class XqueryForLoopContext extends XqContext {
		public ReturnClauseContext returnClause() {
			return getRuleContext(ReturnClauseContext.class,0);
		}
		public ForClauseContext forClause() {
			return getRuleContext(ForClauseContext.class,0);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public LetClauseContext letClause() {
			return getRuleContext(LetClauseContext.class,0);
		}
		public XqueryForLoopContext(XqContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterXqueryForLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitXqueryForLoop(this);
		}
	}
	public static class VarXQContext extends XqContext {
		public TerminalNode Var() { return getToken(XQueryParser.Var, 0); }
		public VarXQContext(XqContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterVarXQ(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitVarXQ(this);
		}
	}
	public static class XqueryRelativePathContext extends XqContext {
		public RpContext rp() {
			return getRuleContext(RpContext.class,0);
		}
		public XqContext xq() {
			return getRuleContext(XqContext.class,0);
		}
		public XqueryRelativePathContext(XqContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterXqueryRelativePath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitXqueryRelativePath(this);
		}
	}
	public static class XqueryLetClauseContext extends XqContext {
		public XqContext xq() {
			return getRuleContext(XqContext.class,0);
		}
		public LetClauseContext letClause() {
			return getRuleContext(LetClauseContext.class,0);
		}
		public XqueryLetClauseContext(XqContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterXqueryLetClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitXqueryLetClause(this);
		}
	}
	public static class XqueryJoinContext extends XqContext {
		public VarListContext vars1;
		public VarListContext vars2;
		public XqContext xq(int i) {
			return getRuleContext(XqContext.class,i);
		}
		public List<XqContext> xq() {
			return getRuleContexts(XqContext.class);
		}
		public VarListContext varList(int i) {
			return getRuleContext(VarListContext.class,i);
		}
		public List<VarListContext> varList() {
			return getRuleContexts(VarListContext.class);
		}
		public XqueryJoinContext(XqContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterXqueryJoin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitXqueryJoin(this);
		}
	}

	public final XqContext xq() throws RecognitionException {
		return xq(0);
	}

	private XqContext xq(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		XqContext _localctx = new XqContext(_ctx, _parentState);
		XqContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_xq, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			switch (_input.LA(1)) {
			case T__7:
				{
				_localctx = new XqueryLetClauseContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
